<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about_license">Copyright &#169; 2013 The Thought About You Project. All rights reserved.\nReleased to the public under the GNU Affero General Public License v3.\nhttps://www.gnu.org/licenses/agpl-3.0.html\nContact The Thought About You Project for additional licensing options.</string>
    <string name="action_about">About</string>
    <string name="app_name">Thought About You</string>
    <string name="app_version">1.0.1-SNAPSHOT</string>
    <string name="button">Think About Someone</string>
    <string name="button_contentDescription">Think About Someone</string>
    <string name="could_not_find_any_suitable_phone_numbers_to_call">Couldn\'t find any suitable phone numbers to call.</string>
    <string name="empty">""</string>
    <string name="homepage_link">ThoughtAboutYou.net</string>
    <string name="logotype_content_description">Thought About You logotype</string>
    <string name="space">" "</string>

</resources>