<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dip" >

    <!-- https://developer.android.com/reference/android/widget/FrameLayout.html -->
    <!-- "FrameLayout should be used to hold a single child view" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/app_info1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_info4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/space" />

            <TextView
                android:id="@+id/app_info5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/homepage_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/homepage_link" />

        <TextView
            android:id="@+id/vertical_spacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/license_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_license" />
    </LinearLayout>

</FrameLayout>